--- a/chat/9/template/partials/topNavigation.ejs
+++ b/chat/9/template/partials/topNavigation.ejs
@@ -7,7 +7,7 @@
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <% if (user) { %>
-    <li><a href="" onclick="$('<form method=POST action=/logout>').submit();return false">Выйти</a></form></li>
+    <li><a href="" onclick="$('<form method=POST action=/logout></form>').submit();return false">Выйти</a></li>
     <% } else { %>
     <li><a href="/login">Войти</a></li>
     <% } %>
